--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+/* body{
+  margin: 100px 0px;
+} */
+
 h2, h3, h4, p {
 
   font-family: 'Source Sans Pro', sans-serif;
@@ -33,27 +37,33 @@ h2, h3, h4, p {
 }
 
 .bg-m {
-  color: var(--m-color) !important;
+  background-color: var(--m-color) !important;
 }
 
 .bg-s {
-  color: var(--s-color) !important;
+  background-color: var(--s-color) !important;
 }
 
 .bg-t {
-  color: var(--t-color) !important;
+  background-color: var(--t-color) !important;
 }
 
 .bg-a {
-  color: var(--a-color) !important;
+  background-color: var(--a-color) !important;
 }
 
 /* NAVBAR */
 .bi-person{
  color: #000000!important;
  font-weight: bold!important;
-
 }
+
+ .bi-person:hover{
+  color: var(--a-color)!important;
+  transition:  0.3s ease-out;
+}
+
+
 .personToggle{
   color: #000000!important;
  font-weight: bold!important;
@@ -64,7 +74,7 @@ h2, h3, h4, p {
  cursor: pointer;
 }
 
-.bi:hover{
+.bi-search:hover{
   color: var(--a-color)!important;
   transition:  0.3s ease-out;
 }
@@ -86,6 +96,7 @@ h2, h3, h4, p {
   cursor: pointer;
 
 }
+
 
 .nav-active {
   background-color: white!important;
@@ -216,5 +227,122 @@ h2, h3, h4, p {
 
 /* FINE CAROSELLO HOMEPAGE */
 
-  
+/* PAGINA SHOW */
+hr{
+  margin: 15px auto;
+  width: 85%;
+}
+
+.showDescription{
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.bi-heart{
+ cursor: pointer;
+}
+
+.bi-cart4:hover{
+  cursor: pointer;
+  color: var(--a-color)!important;
+
+}
+
+/* INIZIO CARD MASSICCIA */
+.card--1 .card__img, .card--1 .card__img--hover {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.card__like {
+  width: 18px;
+}
+
+.card__clock {
+  width: 15px;
+  vertical-align: middle;
+  fill: #AD7D52;
+}
+.card__time {
+  font-size: 12px;
+  color: #AD7D52;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+
+.card__clock-info {
+  float: right;
+}
+
+.card__img {
+  visibility: hidden;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 235px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.card__info-hover {
+  position: absolute;
+  padding: 16px;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+}
+
+.card__img--hover {
+  transition: 0.4s all ease-out;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  position: absolute;
+  height: 235px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  top: 0;
+}
+
+.card {
+  margin-right: 25px;
+  transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+  background-color: #fff;
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+}
+
+.card:hover {
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
+  transform: scale(1.00, 1.00);
+}
+
+.card__info {
+  z-index: 2;
+  background-color: #fff;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 16px 24px 24px 24px;
+}
+
+.card:hover .card__img--hover {
+  height: 100%;
+  opacity: 0.75;
+}
+
+.card:hover .card__info {
+  background-color: transparent;
+  position: relative;
+}
+
+.card:hover .card__info-hover {
+  opacity: 1;
+}
+/* FINE CARD MASSICCIA */
+
 
