--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -349,4 +349,82 @@ hr{
   margin-top: 100px;
 }
 
+/* INIZIO SEARCH */
+.formSearcher{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  transition: all 1s;
+  width: 50px;
+  height: 50px;
+  background: white;
+  box-sizing: border-box;
+  border-radius: 25px;
+  border: 4px solid white;
+  padding: 5px;
+}
+
+.inputSearcher{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;;
+  height: 42.5px;
+  line-height: 30px;
+  outline: 0;
+  border: 0;
+  display: none;
+  font-size: 1em;
+  border-radius: 20px;
+  padding: 0 20px;
+  border: 1px solid var(--a-color);
+}
+
+.inputCustom{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;;
+  height: 42.5px;
+  line-height: 30px;
+  outline: 0;
+  border: 0;
+  display: none;
+  font-size: 1em;
+  border-radius: 20px;
+  padding: 0 20px;
+  border: 1px solid var(--a-color);
+}
+
+.fa{
+  box-sizing: border-box;
+  padding: 10px;
+  width: 42.5px;
+  height: 42.5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+  color: black;
+  text-align: center;
+  font-size: 1.2em;
+  transition: all 1s;
+}
+
+.formSearcher:hover{
+  width: 300px;
+  cursor: pointer;
+}
+
+.formSearcher:hover input{
+  display: block;
+}
+
+.formSearcher:hover .fa{
+  background: var(--a-color);
+  color: white;
+}
+/* FINE SEARCH */
+
 
