--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -402,3 +402,91 @@ hr{
 }
 /* FINE SEARCH */
 
+/* PROFILE */
+.topCardProfile {
+  background-color: var(--a-color);
+  height:200px;
+}
+
+/*  INIZIO FOOTER */
+
+#logoBianco{
+  width: 150px;
+}
+
+#footer{
+  height: 325px;
+  background-color: #b8b8b8;
+  background: rgb(4,99,128);
+  background: linear-gradient(0deg, rgba(4,99,128,1) 97%, rgba(11,140,180,1) 100%);
+  border-top-left-radius: 17px;
+  border-top-right-radius: 17px;
+  z-index: 0;
+}
+
+.leftFooter{
+  height: px;
+  background-color:rgb(4,99,128);
+}
+
+.centralFooter{
+  height: px;
+  background-color: rgb(4,99,128);
+}
+
+@media screen and (max-width: 600px) {
+  .prova{
+    display: block;
+  }
+}
+
+#rightFooter{
+  height: px;
+  background-color: rgb(4,99,128);
+  background: rgb(22,26,29);
+  background: linear-gradient(90deg, rgba(22,26,29,1) 0%, rgba(38,53,66,1) 100%);
+  border-radius: 6px;
+}
+
+#rightFooter {
+  transition: transform .3s ease-out;
+
+}
+#rightFooter:hover {
+  transform: translate(0, -35px);
+}
+
+/*  ANIMAZIONI */
+
+.animation
+{
+    color: #000000;
+    text-decoration: none;
+    font-size: 15px;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    z-index: 0;
+    cursor: pointer;
+}
+
+.animation:before
+{
+    position: absolute;
+    width: 2px;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    content: '';
+    background: #FFF;
+    opacity: 0.3;
+    transition: all 0.3s;
+}
+
+.animation:hover:before
+{
+    width: 100%;
+}
+
+/* FINE FOOTER */
+
