--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,9 @@
-* {
-  
+*{
   font-family: 'Montserrat', sans-serif;
 }
 
-/* body{
-  margin: 100px 0px;
-} */
-
 h2, h3, h4, p {
-
+  
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -17,7 +12,7 @@ h2, h3, h4, p {
   --s-color: #f3f3f3    !important;
   --t-color: #868686 !important;
   --a-color: #046380 !important;
-
+  
 }
 
 .tx-m {
@@ -52,6 +47,11 @@ h2, h3, h4, p {
   background-color: var(--a-color) !important;
 }
 
+a{
+  text-decoration: none;
+  color: black;
+}
+
 /* NAV OFFICIAL */
 .notificationCustom{
   position: absolute;
@@ -84,15 +84,211 @@ h2, h3, h4, p {
   color: var(--a-color)!important;
   transition:  0.3s ease-out;
   cursor: pointer;
-
+  
 }
 
-/* PRIMO CAROSELLO */
+/* NUOVA MODALE */
+.social {
+  color: black;
+  text-decoration: none;
+}
 
-.swiper {
-    width: 100%;
-    height: 100%;
+.buttonModal {
+  border-radius: 20px;
+  border: 1px solid #046380;
+  background-color: #046380;
+  color: #FFFFFF;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+
+.buttonModal:active {
+  transform: scale(0.95);
+}
+
+.buttonModal:focus {
+  outline: none;
+}
+
+.buttonModal.ghost {
+  background-color: transparent;
+  border-color: #FFFFFF;
+}
+
+.formModal {
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+.inputModal {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
+
+.containerModal {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+  0 10px 10px rgba(0,0,0,0.22);
+  position: relative;
+  overflow: hidden; 
+  width: 100%;
+  min-height: 600px;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+}
+
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.containerModal.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: show 0.6s;
+}
+
+@keyframes show {
+  0%, 49.99% {
+    opacity: 0;
+    z-index: 1;
   }
+  
+  50%, 100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.containerModal.right-panel-active .overlay-container{
+  transform: translateX(-100%);
+}
+
+.overlay {
+  background: linear-gradient(to right, #046380, #046380);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #FFFFFF;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.containerModal.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.containerModal.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.containerModal.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+.social-container {
+  margin: 20px 0;
+}
+
+.social-container a {
+  border: 1px solid #DDDDDD;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
+  height: 40px;
+  width: 40px;
+}
+
+.buttonModalCustom1{
+  margin-top: 300px;
+  border: none;
+}
+
+.buttonModalCustom2{
+  margin-left: 420px;
+  border: none;
+}
+
+/* FINE MODALE */
+
+/* PRIMO CAROSELLO */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
 
 .swiper-slide {
   text-align: center;
@@ -150,6 +346,46 @@ h2, h3, h4, p {
   object-fit: cover;
 }
 
+.btnIntro{
+  font-family: Roboto, sans-serif;
+  font-weight: 0;
+  font-size: 16px;
+  color: #fff;
+  background-color: rgb(3,99,128);
+  padding: 7px 35px;
+  border: none;
+  box-shadow: rgb(0, 0, 0) 3px 0px 22px -22px;
+  border-radius: 6px;
+  transition : 431ms;
+  transform: translateY(0);
+  cursor: pointer;
+  }
+  
+  .btnIntro:hover{
+  
+  transition : 431ms;
+  padding: 7px 51px;
+  transform : translateY(-0px);
+  background-color: #fff;
+  color: rgb(3,99,128);
+  border: none;
+  }
+  
+  .marginWelcome{
+    margin-bottom: 220px;
+    margin-right: 350px;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .marginWelcome{
+      margin-bottom: 0px;
+      margin-right: 0px;
+    }
+    .btnIntro{
+      width: 60%;
+  
+    }
+  }
 /* CAROSELLO HOMEPAGE */
 
 .parallax-bg1 {
@@ -195,8 +431,8 @@ h2, h3, h4, p {
 
 @media screen and (max-width: 992px) {
   .slideCustom {
-      width: 50%;
-      height: 100%; 
+    width: 50%;
+    height: 100%; 
   }
 }
 
@@ -214,13 +450,13 @@ hr{
 }
 
 .bi-heart{
- cursor: pointer;
+  cursor: pointer;
 }
 
 .bi-cart4:hover{
   cursor: pointer;
   color: var(--a-color)!important;
-
+  
 }
 
 /* INIZIO CARD MASSICCIA */
@@ -418,7 +654,6 @@ hr{
   height: 325px;
   background-color: #b8b8b8;
   background: rgb(4,99,128);
-  background: linear-gradient(0deg, rgba(4,99,128,1) 97%, rgba(11,140,180,1) 100%);
   border-top-left-radius: 17px;
   border-top-right-radius: 17px;
   z-index: 0;
@@ -450,7 +685,7 @@ hr{
 
 #rightFooter {
   transition: transform .3s ease-out;
-
+  
 }
 #rightFooter:hover {
   transform: translate(0, -35px);
@@ -460,33 +695,294 @@ hr{
 
 .animation
 {
-    color: #000000;
-    text-decoration: none;
-    font-size: 15px;
-    margin: 0px 10px;
-    padding: 10px 10px;
-    position: relative;
-    z-index: 0;
-    cursor: pointer;
+  color: #000000;
+  text-decoration: none;
+  font-size: 15px;
+  margin: 0px 10px;
+  padding: 10px 10px;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
 }
 
 .animation:before
 {
-    position: absolute;
-    width: 2px;
-    height: 100%;
-    left: 0px;
-    top: 0px;
-    content: '';
-    background: #FFF;
-    opacity: 0.3;
-    transition: all 0.3s;
+  position: absolute;
+  width: 2px;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  content: '';
+  background: #FFF;
+  opacity: 0.3;
+  transition: all 0.3s;
 }
 
 .animation:hover:before
 {
-    width: 100%;
+  width: 100%;
 }
-
 /* FINE FOOTER */
 
+/* CAROSELLO ANNUNCI */
+.slick-slide {
+  margin: 0px 20px;
+}
+
+.slick-slide img {
+  width: 100%;
+}
+
+.slick-slider
+{
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus
+{
+  outline: none;
+}
+.slick-list.dragging
+{
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+  display: table;
+  content: '';
+}
+.slick-track:after
+{
+  clear: both;
+}
+.slick-loading .slick-track
+{
+  visibility: hidden;
+}
+
+.slick-slide
+{
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+  float: right;
+}
+.slick-slide img
+{
+  display: block;
+}
+.slick-slide.slick-loading img
+{
+  display: none;
+}
+.slick-slide.dragging img
+{
+  pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+  display: block;
+}
+.slick-loading .slick-slide
+{
+  visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+  display: none;
+}
+/* FINE CAROSELLO ANNUNCI */
+
+/* CAROSELLO CATEGORIE HOME */
+.flex-container {
+  height: 70vh;
+  width: 100%;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.flex-title {
+  color: black;
+  position: relative;
+  margin: auto;
+  text-align: center;
+  top: 40%;
+}
+
+.flex-slide {
+  -webkit-flex: 1;  
+  -ms-flex: 1; 
+  flex: 1;
+  cursor: pointer;
+  -webkit-transition: all 2000ms ease;
+  -moz-transition: all 2000ms ease;
+  -ms-transition: all 2000ms ease;
+  -o-transition: all 2000ms ease;
+  transition: all 1000ms ease;
+  @media screen and (max-width: 768px) {
+    overflow: auto;
+    overflow-x: hidden;
+  }
+}
+
+.flex-slide:hover {
+  -webkit-flex-grow: 3;
+  flex-grow: 3;
+}
+
+.home {
+  background-image: url(/public/media/test.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+.about {
+  background: url(/public/media/test2.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+.work {
+  background: url(/public/media/test.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+.bamba {
+  background: url(/public/media/test2.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+.videoCustom{
+  object-fit: cover;
+}
+
+.dropdown-menu {
+  text-align: center;
+  height: 50px!important;
+  width: 90%!important;
+  position: absolute;
+  top: 70px;
+  right: 0px;
+  bottom: -50px;
+  left: 70px!important;
+}
+
+.dropItem {
+    display:inline-block;
+    margin-right: 15px;
+    transition:all 0.3s ease-in-out;
+  }
+
+.submenu:hover {
+
+        height: 85px;
+      }
+
+.dropdown-item:hover {
+        color: #3862a0!important;
+}
+.dropdown-item::before
+        {
+          visibility: visible;
+          transform: scale(1, 1);
+}
+
+  .submenu {
+      overflow:hidden;
+      position:absolute;
+      left: 0;
+      width: 100%;
+      height: 0;
+      line-height: 40px;
+      box-sizing:border-box;
+      transition:height 0.3s ease-in-out;
+      transition-delay: 0.1s;
+  }
+
+
+.dropdown-item {
+        color: black;
+        margin-top: 20px;
+        font-size: 16px;
+    }
+
+.dropdown-item:hover {
+          color: var(--a-color);
+          text-decoration:none;
+        }
+
+
+.dropdown-item {
+      color: #999;
+      display: block;
+      padding: 0 7px 0 7px;
+      margin: 0 0 10px;
+      text-decoration: none;
+      position: relative;
+    }
+.dropdown-item::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        bottom: -10px;
+        left: 0px;
+        background-color: #3862a0;
+        transition: all 0.2s ease-in-out;
+        transform: scale(0, 0);
+        visibility: hidden;
+      }
