--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,138 +87,149 @@ a{
   
 }
 
-/* NUOVA MODALE */
+/* LOGIN E REGISTER*/
 .social {
   color: black;
-  text-decoration: none;
+text-decoration: none;
 }
 
 .buttonModal {
-  border-radius: 20px;
-  border: 1px solid #046380;
-  background-color: #046380;
-  color: #FFFFFF;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 12px 45px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: transform 80ms ease-in;
+border-radius: 17px;
+border: 1px solid #046380;
+background-color: #046380;
+color: #FFFFFF;
+font-size: 12px;
+font-weight: bold;
+padding: 12px 45px;
+letter-spacing: 1px;
+text-transform: uppercase;
+transition: transform 80ms ease-in;
 }
 
 .buttonModal:active {
-  transform: scale(0.95);
+transform: scale(0.95);
 }
 
 .buttonModal:focus {
-  outline: none;
+outline: none;
 }
 
 .buttonModal.ghost {
-  background-color: transparent;
-  border-color: #FFFFFF;
+background-color: transparent;
+border-color: #FFFFFF;
 }
 
 .formModal {
-  background-color: #FFFFFF;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 50px;
-  height: 100%;
-  text-align: center;
+background-color: #FFFFFF;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+padding: 0 50px;
+height: 100%;
+text-align: center;
 }
 
 .inputModal {
+background-color: #eee;
+border: none;
+padding: 12px 15px;
+margin: 8px 0;
+width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .inputModal {
   background-color: #eee;
   border: none;
   padding: 12px 15px;
   margin: 8px 0;
-  width: 100%;
+  width: 200%;
+  }
 }
 
 .containerModal {
-  background-color: #fff;
-  border-radius: 10px;
+background-color: #fff;
+border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-  0 10px 10px rgba(0,0,0,0.22);
-  position: relative;
-  overflow: hidden; 
-  width: 100%;
-  min-height: 600px;
+    0 10px 10px rgba(0,0,0,0.22);
+position: relative;
+overflow: hidden;
+width: 768px;
+max-width: 100%;
+min-height: 480px;
 }
 
 .form-container {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  transition: all 0.6s ease-in-out;
+position: absolute;
+top: 0;
+height: 100%;
+transition: all 0.6s ease-in-out;
 }
 
 .sign-in-container {
-  left: 0;
-  width: 50%;
-  z-index: 2;
+left: 0;
+width: 50%;
+z-index: 2;
 }
 
 .container.right-panel-active .sign-in-container {
-  transform: translateX(100%);
+transform: translateX(100%);
 }
 
 .sign-up-container {
-  left: 0;
-  width: 50%;
+left: 0;
+width: 50%;
+opacity: 0;
+z-index: 1;
+}
+
+.containerModal.right-panel-active .sign-up-container {
+transform: translateX(100%);
+opacity: 1;
+z-index: 5;
+animation: show 0.6s;
+}
+
+@keyframes show {
+0%, 49.99% {
   opacity: 0;
   z-index: 1;
 }
 
-.containerModal.right-panel-active .sign-up-container {
-  transform: translateX(100%);
+50%, 100% {
   opacity: 1;
   z-index: 5;
-  animation: show 0.6s;
 }
-
-@keyframes show {
-  0%, 49.99% {
-    opacity: 0;
-    z-index: 1;
-  }
-  
-  50%, 100% {
-    opacity: 1;
-    z-index: 5;
-  }
 }
 
 .overlay-container {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-  transition: transform 0.6s ease-in-out;
-  z-index: 100;
+position: absolute;
+top: 0;
+left: 50%;
+width: 50%;
+height: 100%;
+overflow: hidden;
+transition: transform 0.6s ease-in-out;
+z-index: 100;
 }
 
 .containerModal.right-panel-active .overlay-container{
-  transform: translateX(-100%);
+transform: translateX(-100%);
 }
 
 .overlay {
-  background: linear-gradient(to right, #046380, #046380);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0 0;
-  color: #FFFFFF;
-  position: relative;
-  left: -100%;
-  height: 100%;
-  width: 200%;
+background: linear-gradient(to right, #046380, #046380);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: 0 0;
+color: #FFFFFF;
+position: relative;
+left: -100%;
+height: 100%;
+width: 200%;
   transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
+transition: transform 0.6s ease-in-out;
 }
 
 .containerModal.right-panel-active .overlay {
@@ -226,63 +237,52 @@ a{
 }
 
 .overlay-panel {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 40px;
-  text-align: center;
-  top: 0;
-  height: 100%;
-  width: 50%;
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
+position: absolute;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+padding: 0 40px;
+text-align: center;
+top: 0;
+height: 100%;
+width: 50%;
+transform: translateX(0);
+transition: transform 0.6s ease-in-out;
 }
 
 .overlay-left {
-  transform: translateX(-20%);
+transform: translateX(-20%);
 }
 
 .containerModal.right-panel-active .overlay-left {
-  transform: translateX(0);
+transform: translateX(0);
 }
 
 .overlay-right {
-  right: 0;
-  transform: translateX(0);
+right: 0;
+transform: translateX(0);
 }
 
 .containerModal.right-panel-active .overlay-right {
-  transform: translateX(20%);
+transform: translateX(20%);
 }
 
 .social-container {
-  margin: 20px 0;
+margin: 20px 0;
 }
 
 .social-container a {
-  border: 1px solid #DDDDDD;
-  border-radius: 50%;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 5px;
-  height: 40px;
-  width: 40px;
+border: 1px solid #DDDDDD;
+border-radius: 50%;
+display: inline-flex;
+justify-content: center;
+align-items: center;
+margin: 0 5px;
+height: 40px;
+width: 40px;
 }
-
-.buttonModalCustom1{
-  margin-top: 300px;
-  border: none;
-}
-
-.buttonModalCustom2{
-  margin-left: 420px;
-  border: none;
-}
-
-/* FINE MODALE */
+/* FINE LOGIN E REGISTER*/
 
 /* PRIMO CAROSELLO */
 .swiper {
@@ -359,9 +359,9 @@ a{
   transition : 431ms;
   transform: translateY(0);
   cursor: pointer;
-  }
-  
-  .btnIntro:hover{
+}
+
+.btnIntro:hover{
   
   transition : 431ms;
   padding: 7px 51px;
@@ -369,23 +369,23 @@ a{
   background-color: #fff;
   color: rgb(3,99,128);
   border: none;
-  }
-  
+}
+
+.marginWelcome{
+  margin-bottom: 220px;
+  margin-right: 350px;
+}
+
+@media screen and (max-width: 600px) {
   .marginWelcome{
-    margin-bottom: 220px;
-    margin-right: 350px;
+    margin-bottom: 0px;
+    margin-right: 0px;
   }
-  
-  @media screen and (max-width: 600px) {
-    .marginWelcome{
-      margin-bottom: 0px;
-      margin-right: 0px;
-    }
-    .btnIntro{
-      width: 60%;
-  
-    }
+  .btnIntro{
+    width: 60%;
+    
   }
+}
 /* CAROSELLO HOMEPAGE */
 
 .parallax-bg1 {
@@ -850,7 +850,7 @@ hr{
 }
 
 .flex-title {
-  color: black;
+  color: white;
   position: relative;
   margin: auto;
   text-align: center;
@@ -879,14 +879,14 @@ hr{
 }
 
 .home {
-  background-image: url(/public/media/test.jpg);
+  background-image: url(/public/media/test2.jpg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
 }
 
 .about {
-  background: url(/public/media/test2.jpg);
+  background: url(/public/media/console.jpg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -900,7 +900,7 @@ hr{
 }
 
 .bamba {
-  background: url(/public/media/test2.jpg);
+  background: url(/public/media/sports.jpg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -908,6 +908,7 @@ hr{
 
 .videoCustom{
   object-fit: cover;
+  width: 100%;
 }
 
 .dropdown-menu {
@@ -919,70 +920,96 @@ hr{
   right: 0px;
   bottom: -50px;
   left: 70px!important;
+  border-radius: 0%;
+  border-bottom-left-radius: 17px;
+  border-bottom-right-radius: 17px;
+  --bs-dropdown-link-active-bg: none!important;
 }
 
 .dropItem {
-    display:inline-block;
-    margin-right: 15px;
-    transition:all 0.3s ease-in-out;
-  }
+  display:inline-block;
+  transition:all 0.3s ease-in-out;
+}
 
 .submenu:hover {
-
-        height: 85px;
-      }
+  
+  height: 85px;
+}
 
 .dropdown-item:hover {
-        color: #3862a0!important;
+  color: #3862a0!important;
 }
+
 .dropdown-item::before
-        {
-          visibility: visible;
-          transform: scale(1, 1);
+{
+  visibility: visible;
+  transform: scale(1, 1);
 }
 
-  .submenu {
-      overflow:hidden;
-      position:absolute;
-      left: 0;
-      width: 100%;
-      height: 0;
-      line-height: 40px;
-      box-sizing:border-box;
-      transition:height 0.3s ease-in-out;
-      transition-delay: 0.1s;
-  }
+.submenu {
+  overflow:hidden;
+  position:absolute;
+  left: 0;
+  width: 100%;
+  height: 0;
+  line-height: 40px;
+  box-sizing:border-box;
+  transition:height 0.3s ease-in-out;
+  transition-delay: 0.1s;
+}
 
 
 .dropdown-item {
-        color: black;
-        margin-top: 20px;
-        font-size: 16px;
-    }
+  color: black;
+  margin-top: 20px;
+  font-size: 16px;
+}
 
 .dropdown-item:hover {
-          color: var(--a-color);
-          text-decoration:none;
-        }
+  color: var(--a-color);
+  text-decoration:none;
+}
 
 
 .dropdown-item {
-      color: #999;
-      display: block;
-      padding: 0 7px 0 7px;
-      margin: 0 0 10px;
-      text-decoration: none;
-      position: relative;
-    }
+  color: #999;
+  display: block;
+  padding: 0 7px 0 7px;
+  margin: 0 0 10px;
+  text-decoration: none;
+  position: relative;
+}
 .dropdown-item::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 3px;
-        bottom: -10px;
-        left: 0px;
-        background-color: #3862a0;
-        transition: all 0.2s ease-in-out;
-        transform: scale(0, 0);
-        visibility: hidden;
-      }
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: -10px;
+  left: 0px;
+  background-color: #3862a0;
+  transition: all 0.2s ease-in-out;
+  transform: scale(0, 0);
+  visibility: hidden;
+}
+
+.titleVideo{
+  position: absolute;
+  top: 150px;
+  left: 150px;
+  color: white;
+}
+
+.pVideo{
+  position: absolute;
+  width: 50%;
+  top: 250px;
+  left: 150px;
+  color: white;
+}
+
+.btnVideo{
+  position: absolute;
+  top: 370px;
+  left: 150px;
+  color: white;
+}
