--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1060,3 +1060,11 @@ hr{
   border-color: aliceblue;
   background-color: hsla(0,0%,100%,0);
 }
+
+.img-preview{
+  width: 200px;
+  height: 200px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
