--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -953,7 +953,6 @@ hr{
   transition-delay: 0.1s;
 }
 
-
 .dropdown-item {
   color: black;
   margin-top: 20px;
@@ -985,6 +984,12 @@ hr{
   transition: all 0.2s ease-in-out;
   transform: scale(0, 0);
   visibility: hidden;
+}
+
+.dropLanguage{
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 16px;
 }
 
 .videoCustom{
