--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -353,7 +353,7 @@ width: 40px;
   color: #fff;
   background-color: rgb(3,99,128);
   padding: 7px 35px;
-  border: none;
+  border: 2px solid var(--a-color);
   box-shadow: rgb(0, 0, 0) 3px 0px 22px -22px;
   border-radius: 6px;
   transition : 431ms;
@@ -368,7 +368,7 @@ width: 40px;
   transform : translateY(-0px);
   background-color: #fff;
   color: rgb(3,99,128);
-  border: none;
+  border: 2px solid var(--a-color);
 }
 
 .marginWelcome{
@@ -906,20 +906,22 @@ hr{
   background-attachment: fixed;
 }
 
-.dropdown-menu {
+.dropdown-menu-category {
   text-align: center;
   height: 50px!important;
   width: 90%!important;
-  position: absolute;
-  top: 70px;
-  right: 0px;
-  bottom: -50px;
+  position: absolute!important;
+  top: 70px!important;
+  right: 0px!important;
+  bottom: -50px!important;
   left: 70px!important;
-  border-radius: 0%;
-  border-bottom-left-radius: 17px;
-  border-bottom-right-radius: 17px;
+  border-radius: 0%!important;
+  border-bottom-left-radius: 17px!important;
+  border-bottom-right-radius: 17px!important;
   --bs-dropdown-link-active-bg: none!important;
 }
+
+
 
 .dropItem {
   display:inline-block;
@@ -930,6 +932,7 @@ hr{
   
   height: 85px;
 }
+
 
 .dropdown-item:hover {
   color: #3862a0!important;
@@ -991,7 +994,32 @@ hr{
   justify-content: space-evenly;
   font-size: 16px;
 }
+.dropdown-menu-lang {
+  
+  text-align: center;
+  height: 130px!important;
+  width: 50%!important;
+  position: absolute!important;
+  top: 60px!important;
+  bottom: -50px!important;
+  left: -45px!important;
+  border-radius: 0%!important;
+  border-bottom-left-radius: 17px!important;
+  border-bottom-right-radius: 17px!important;
+  --bs-dropdown-link-active-bg: none!important;
+}
 
+.submenuLang {
+  overflow:hidden;
+  position:absolute;
+  left: 0;
+  width: 10px!important;
+  height: 0;
+  line-height: 30px;
+  box-sizing:border-box;
+  transition:height 0.3s ease-in-out;
+  transition-delay: 0.1s;
+}
 .videoCustom{
   object-fit: cover;
   width: 100%;
@@ -1073,3 +1101,31 @@ hr{
   background-position: center;
   background-repeat: no-repeat;
 }
+
+/* STYLE CREA ANNUNCI */
+
+.stickyForm{
+  position: sticky;
+  top: 85px;
+  height: 70vh;
+}
+
+.prestoBackgroundAnimate{
+  background: linear-gradient(-45deg,  var(--a-color), #0b91ba, var(--a-color), #0b91ba);
+  background-size: 400% 400%;
+  background-attachment: fixed;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
