--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -90,146 +90,146 @@ a{
 /* LOGIN E REGISTER*/
 .social {
   color: black;
-text-decoration: none;
+  text-decoration: none;
 }
 
 .buttonModal {
-border-radius: 17px;
-border: 1px solid #046380;
-background-color: #046380;
-color: #FFFFFF;
-font-size: 12px;
-font-weight: bold;
-padding: 12px 45px;
-letter-spacing: 1px;
-text-transform: uppercase;
-transition: transform 80ms ease-in;
+  border-radius: 17px;
+  border: 1px solid #046380;
+  background-color: #046380;
+  color: #FFFFFF;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
 }
 
 .buttonModal:active {
-transform: scale(0.95);
+  transform: scale(0.95);
 }
 
 .buttonModal:focus {
-outline: none;
+  outline: none;
 }
 
 .buttonModal.ghost {
-background-color: transparent;
-border-color: #FFFFFF;
+  background-color: transparent;
+  border-color: #FFFFFF;
 }
 
 .formModal {
-background-color: #FFFFFF;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-padding: 0 50px;
-height: 100%;
-text-align: center;
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
 }
 
 .inputModal {
-background-color: #eee;
-border: none;
-padding: 12px 15px;
-margin: 8px 0;
-width: 100%;
-}
-
-@media screen and (max-width: 600px) {
-  .inputModal {
   background-color: #eee;
   border: none;
   padding: 12px 15px;
   margin: 8px 0;
-  width: 200%;
+  width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .inputModal {
+    background-color: #eee;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 200%;
   }
 }
 
 .containerModal {
-background-color: #fff;
-border-radius: 10px;
+  background-color: #fff;
+  border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-    0 10px 10px rgba(0,0,0,0.22);
-position: relative;
-overflow: hidden;
-width: 768px;
-max-width: 100%;
-min-height: 480px;
+  0 10px 10px rgba(0,0,0,0.22);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
 }
 
 .form-container {
-position: absolute;
-top: 0;
-height: 100%;
-transition: all 0.6s ease-in-out;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
 }
 
 .sign-in-container {
-left: 0;
-width: 50%;
-z-index: 2;
+  left: 0;
+  width: 50%;
+  z-index: 2;
 }
 
 .container.right-panel-active .sign-in-container {
-transform: translateX(100%);
+  transform: translateX(100%);
 }
 
 .sign-up-container {
-left: 0;
-width: 50%;
-opacity: 0;
-z-index: 1;
-}
-
-.containerModal.right-panel-active .sign-up-container {
-transform: translateX(100%);
-opacity: 1;
-z-index: 5;
-animation: show 0.6s;
-}
-
-@keyframes show {
-0%, 49.99% {
+  left: 0;
+  width: 50%;
   opacity: 0;
   z-index: 1;
 }
 
-50%, 100% {
+.containerModal.right-panel-active .sign-up-container {
+  transform: translateX(100%);
   opacity: 1;
   z-index: 5;
+  animation: show 0.6s;
 }
+
+@keyframes show {
+  0%, 49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+  
+  50%, 100% {
+    opacity: 1;
+    z-index: 5;
+  }
 }
 
 .overlay-container {
-position: absolute;
-top: 0;
-left: 50%;
-width: 50%;
-height: 100%;
-overflow: hidden;
-transition: transform 0.6s ease-in-out;
-z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
 }
 
 .containerModal.right-panel-active .overlay-container{
-transform: translateX(-100%);
+  transform: translateX(-100%);
 }
 
 .overlay {
-background: linear-gradient(to right, #046380, #046380);
-background-repeat: no-repeat;
-background-size: cover;
-background-position: 0 0;
-color: #FFFFFF;
-position: relative;
-left: -100%;
-height: 100%;
-width: 200%;
+  background: linear-gradient(to right, #046380, #046380);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #FFFFFF;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
   transform: translateX(0);
-transition: transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
 }
 
 .containerModal.right-panel-active .overlay {
@@ -237,50 +237,50 @@ transition: transform 0.6s ease-in-out;
 }
 
 .overlay-panel {
-position: absolute;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-padding: 0 40px;
-text-align: center;
-top: 0;
-height: 100%;
-width: 50%;
-transform: translateX(0);
-transition: transform 0.6s ease-in-out;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
 }
 
 .overlay-left {
-transform: translateX(-20%);
+  transform: translateX(-20%);
 }
 
 .containerModal.right-panel-active .overlay-left {
-transform: translateX(0);
+  transform: translateX(0);
 }
 
 .overlay-right {
-right: 0;
-transform: translateX(0);
+  right: 0;
+  transform: translateX(0);
 }
 
 .containerModal.right-panel-active .overlay-right {
-transform: translateX(20%);
+  transform: translateX(20%);
 }
 
 .social-container {
-margin: 20px 0;
+  margin: 20px 0;
 }
 
 .social-container a {
-border: 1px solid #DDDDDD;
-border-radius: 50%;
-display: inline-flex;
-justify-content: center;
-align-items: center;
-margin: 0 5px;
-height: 40px;
-width: 40px;
+  border: 1px solid #DDDDDD;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
+  height: 40px;
+  width: 40px;
 }
 /* FINE LOGIN E REGISTER*/
 
@@ -1052,14 +1052,14 @@ hr{
     width: 100%;
     height: 600px;
   }
-
+  
   .titleVideo{
     position: absolute;
     top: 100px;
     left: 79px;
     color: white;
   }
-
+  
   .pVideo{
     position: absolute;
     width: 60%;
@@ -1067,7 +1067,7 @@ hr{
     left: 79px;
     color: white;
   }
-
+  
   .btnVideo{
     position: absolute;
     top: 450px;
@@ -1107,11 +1107,31 @@ hr{
 .stickyForm{
   position: sticky;
   top: 85px;
- 
+  height: 620px;
 }
 
+@media screen and (max-width: 768px) {
+  .stickyForm{
+    position: sticky;
+    top: 85px;
+    height: 770px;
+    padding-top: 30px;
+  }
+}
 
+.stickyForm2{
+  position: sticky;
+  top: 85px;
+  height: 500px;
+}
 
+@media screen and (max-width: 768px) {
+  .stickyForm2{
+    position: static;
+    height: 500px;
+    margin-bottom: 30px;
+  }
+}
 
 .prestoBackgroundAnimate{
   background: linear-gradient(-45deg,  var(--a-color), #0b91ba, var(--a-color), #0b91ba);
