--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -636,7 +636,7 @@ hr{
 
 .card:hover .card__img--hover {
   height: 100%;
-  opacity: 0.75;
+  opacity: 0.60;
 }
 
 .card:hover .card__info {
@@ -1109,6 +1109,7 @@ hr{
 .videoCustom{
   object-fit: cover;
   width: 100%;
+  height: 100vh;
 }
 
 .titleVideo{
@@ -1244,5 +1245,17 @@ hr{
 .fotoprofilo{
   height: 170px;
   border-radius: 17px;
-  
+}
+
+
+@media screen and (max-width: 768px) {
+  .slideResponsive{
+    height: 60px!important;
+  }
+}
+
+.RevisorCarousel{
+  width: 300px;
+  height: 300px;
+  border-radius: 17px;
 }
