--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -647,6 +647,16 @@ hr{
 .card:hover .card__info-hover {
   opacity: 1;
 }
+
+/* OVERFLOW DELLE CARD anche responsive */
+.overflowCardCustom{
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+  
 /* FINE CARD MASSICCIA */
 
 .marginAlert{
@@ -1243,7 +1253,6 @@ hr{
   width: 100%;
 } */
 .fotoprofilo{
-  height: 170px;
   border-radius: 17px;
 }
 
@@ -1258,4 +1267,15 @@ hr{
   width: 300px;
   height: 300px;
   border-radius: 17px;
+}
+
+/* ANIMAZIONE LOGO nav/foot */
+/* la nav non la prende per lo 'zoom-in' */
+.logoHover {
+  width: 150px;
+  transition: transform 0.2s; 
+}
+
+.logoHover:hover {
+  transform: scale(1.2);
 }
