--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -511,7 +511,7 @@ a{
 
 .parallax-bg2 {
   position: absolute;
-  background-image: url(/public/media/vestiti.jpg);
+  background-image: url(/public/media/scarpe.jpg);
   left: 0;
   top: 0;
   width: 120%;
